--- a/app/src/main/res/layout/dong_sanphammoinhat.xml
+++ b/app/src/main/res/layout/dong_sanphammoinhat.xml
@@ -19,6 +19,37 @@
                 android:layout_gravity="top|right"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
+            <LinearLayout
+
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <ImageView
+                    android:layout_margin="5dp"
+                    android:id="@+id/imgsanphammoi"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"/>
+                <TextView
+                    android:gravity="center"
+                    android:textColor="#000000"
+                    android:textSize="15sp"
+                    android:maxLines="3"
+                    android:ellipsize="end"
+                    android:text="ten san pham"
+                    android:id="@+id/textviewtensanphammoi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:textSize="17sp"
+                    android:gravity="center"
+                    android:textColor="#f20"
+                    android:text="Gia san pham"
+                    android:id="@+id/textviewgiasanphammoi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
         </FrameLayout>
 
     </androidx.cardview.widget.CardView>
